[gd_scene load_steps=4 format=2]

[ext_resource path="res://bullet-prototype/bullets/Bullet.gd" type="Script" id=1]
[ext_resource path="res://bullet-prototype/assets/B&W_Explos√£o_32x32.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="SmallBullet" type="RigidBody2D"]
collision_layer = 2
collision_mask = 4
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Lifetime" type="Timer" parent="."]

[node name="Turnaround" type="Timer" parent="."]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="Turnaround" to="." method="_on_Turnaround_timeout"]
